Enviando informacoes via Multicast